--- a/engine/pyproject.toml
+++ b/engine/pyproject.toml
@@ -8,6 +8,12 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 whisper = {git = "https://github.com/openai/whisper.git"}
+torch = "^1.13.1"
+torchvision = "^0.14.1"
+torchaudio = "^0.13.1"
+tqdm = "^4.64.1"
+ffmpeg = "^1.4"
+transformers = "^4.25.1"
 
 
 [build-system]
