--- a/engine/pyproject.toml
+++ b/engine/pyproject.toml
@@ -14,7 +14,13 @@ torchaudio = "^0.13.1"
 tqdm = "^4.64.1"
 ffmpeg = "^1.4"
 transformers = "^4.25.1"
+ffmpeg-python = "^0.2.0"
+mecab-python3 = "^1.0.6"
+unidic-lite = "^1.0.8"
 
+
+[tool.poetry.group.dev.dependencies]
+ipython = "^8.7.0"
 
 [build-system]
 requires = ["poetry-core"]
