--- a/engine/pyproject.toml
+++ b/engine/pyproject.toml
@@ -13,12 +13,12 @@ torchvision = "^0.14.1"
 torchaudio = "^0.13.1"
 tqdm = "^4.64.1"
 transformers = "^4.25.1"
-mecab-python3 = "^1.0.6"
-unidic-lite = "^1.0.8"
 feedparser = "^6.0.10"
 algoliasearch = "^2.6.3"
 python-dotenv = "^0.21.0"
 ffmpeg-python = "^0.2.0"
+sudachipy = "^0.6.6"
+sudachidict-core = "^20221021"
 
 
 [tool.poetry.group.dev.dependencies]
