--- a/.gitignore
+++ b/.gitignore
@@ -251,3 +251,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,python,windows,vim
+
+media
+!media/.gitkeep
